--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1111,17 +1111,17 @@ input, select, textarea {
 		}
 
 		#bg:before {
-			-moz-transition: background-color 2.5s ease-in-out;
-			-webkit-transition: background-color 2.5s ease-in-out;
-			-ms-transition: background-color 2.5s ease-in-out;
-			transition: background-color 2.5s ease-in-out;
+			-moz-transition: background-color 1s ease-in-out;
+			-webkit-transition: background-color 1s ease-in-out;
+			-ms-transition: background-color 1s ease-in-out;
+			transition: background-color 1s ease-in-out;
 			-moz-transition-delay: 0.75s;
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
 			background-size: auto, 256px 256px;
-			background-position: center, center;
+			background-position: right;
 			background-repeat: no-repeat, repeat;
 			z-index: 2;
 		}
@@ -1135,8 +1135,8 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/bg.jpg");
-			background-position: center;
+			background-image: url("../../images/goosebg.jpg");
+			background-position: left;
 			background-size: cover;
 			background-repeat: no-repeat;
 			z-index: 1;
@@ -1172,15 +1172,17 @@ input, select, textarea {
 		-webkit-align-items: center;
 		-ms-align-items: center;
 		align-items: center;
-		-moz-justify-content: space-between;
-		-webkit-justify-content: space-between;
-		-ms-justify-content: space-between;
-		justify-content: space-between;
+		-moz-justify-content: flex-start;
+		-webkit-justify-content: flex-start;
+		-ms-justify-content: flex-start;
+		justify-content: flex-start;
 		position: relative;
 		min-height: 100vh;
 		width: 100%;
-		padding: 4rem 2rem;
+		/* padding: 4rem 2rem; */
+		padding: 6rem 2rem 4rem;
 		z-index: 3;
+		/* margin-top: 2rem; */
 	}
 
 		#wrapper:before {
@@ -1191,7 +1193,8 @@ input, select, textarea {
 		@media screen and (max-width: 1680px) {
 
 			#wrapper {
-				padding: 3rem 2rem;
+				/* padding: 3rem 2rem; */
+				padding: 6rem 2rem 4rem;
 			}
 
 		}
@@ -1199,7 +1202,9 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			#wrapper {
-				padding: 2rem 1rem;
+				/* padding: 2rem 1rem; */
+				padding: 6rem 2rem 4rem;
+				
 			}
 
 		}
@@ -1367,7 +1372,11 @@ input, select, textarea {
 		#header nav.use-middle ul li.is-middle {
 			border-left: 0;
 		}
-
+		
+		#kiwiBird {
+			font-size: 3rem;
+			vertical-align: middle;
+		}
 		body.is-article-visible #header {
 			-moz-transform: scale(0.95);
 			-webkit-transform: scale(0.95);
